# olliePy

./: .coveragerc  .gitignore  LICENSE  PyPi.md  README.md  generateDocs.sh  pyproject.toml  pytest.ini
.github/workflows/: CI.yml  TestReport.yml  codeql-analysis.yml  pytest.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/pages/API/: report.doctree
docs/_modules/: index.html
docs/_modules/olliepy/: InteractiveDashboard.html  RegressionErrorAnalysisReport.html  Report.html
docs/_sources/pages/: getting_started.md.txt  installation.md.txt
docs/_sources/pages/API/: regression_error_analysis_report.rst.txt
docs/_sources/pages/reports/: interactive_dashboard.md.txt  regression_error_analysis.md.txt
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/pages/: api.doctree  getting_started.doctree  installation.doctree
docs/doctrees/pages/API/: interactive_dashboard.doctree  regression_error_analysis_report.doctree  report.doctree
docs/doctrees/pages/reports/: interactive_dashboard.doctree  regression_error_analysis.doctree
docs/html/: genindex.html  index.html  objects.inv  search.html
docs/html/_modules/: index.html
docs/html/_modules/olliepy/: RegressionErrorAnalysisReport.html  Report.html
docs/html/_sources/: index.rst.txt
docs/html/_sources/pages/API/: regression_error_analysis_report.rst.txt  report.rst.txt
docs/html/pages/: api.html  getting_started.html
docs/html/pages/API/: regression_error_analysis_report.html
docs/olliepy/: Report.html  index.html
docs/olliepy/utils/: TypeChecking.html  index.html
docs/pages/: api.html  getting_started.html  installation.html
docs/pages/API/: interactive_dashboard.html  regression_error_analysis_report.html  report.html
docs/pages/reports/: interactive_dashboard.html  regression_error_analysis.html
examples/: interactive_dashboard_example.ipynb  regression_error_analysis_report.ipynb
examples/.ipynb_checkpoints/: interactive_dashboard_example-checkpoint.ipynb  regression_error_analysis_report-checkpoint.ipynb
examples/data/: BMI_test.csv  BMI_train.csv  sales_data.csv
olliepy/: InteractiveDashboard.py  RegressionErrorAnalysisReport.py  Report.py  __init__.py
olliepy/utils/: TypeChecking.py
reports-templates/interactive-dashboard/: app.py  index.html
reports-templates/interactive-dashboard/css/: app.018a967d.css  app.8951237e.css
reports-templates/interactive-dashboard/js/: app.04cdd730.js  app.0e0ecaf7.js  app.12e26bad.js  app.1b915ca3.js  app.3c1fc041.js  app.3df47f64.js  app.4203efa0.js  app.4b5041a1.js  app.4e5915b9.js  app.53daa148.js  app.6d1e0832.js  app.7f538db2.js  app.abe48f29.js
reports-templates/regression-error-analysis-report/: app.py  index.html
reports-templates/regression-error-analysis-report/css/: app.2a99fb60.css  app.46f59360.css  app.63e3895e.css  app.8f199b26.css
reports-templates/regression-error-analysis-report/js/: app.463f7320.js  app.4f2546a4.js  app.62f92934.js  app.a0034646.js  app.f35665a2.js
sphinxDocs/source/: conf.py  index.rst
sphinxDocs/source/pages/: getting_started.md
sphinxDocs/source/pages/reports/: regression_error_analysis.md
sphinxSource/source/: conf.py  index.rst
sphinxSource/source/pages/: api.rst  getting_started.md
sphinxSource/source/pages/API/: interactive_dashboard.rst  report.md  report.rst
tests/: requirements.txt  temp.json  test_interactive_dashboard.py  test_olliepy.py  test_regression_error_analysis_report.py  test_report.py  utils.py
tests/data/: report_with_patterns_report_categorical_output.json  report_with_patterns_report_output.json  test_data.csv  train_data.csv
tests/output/: README.md  readme.md
tests/tests-report/: reprot.xml
