[tool.poetry]
name = "olliePy"
version = "0.1.15"
description = "**OlliePy** is a python package which can help the data scientists in evaluating and analysing their machine learning experiments by utilising the power and structure of modern web applications. The data scientist only needs to provide the data and any required information and OlliePy will generate the rest."
license = "MIT"
readme = "README.md"
authors = ["ahmed.mohamed <hanoush87@gmail.com>", "aysenur.bilgin <aysenur.bilgin@gmail.com>"]
homepage = "https://github.com/ahmed-mohamed-sn/olliePy"
repository = "https://github.com/ahmed-mohamed-sn/olliePy"
keywords = ["Python", "Machine Learning", "Interactive Reporting", "VueJS"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent"
]
packages = [{ include = "reports-templates" }, {include = "olliepy"}]

[tool.poetry.dependencies]
python = ">= 3.6"
pandas = ">= 0.25.0"
scikit-learn = ">= 0.22"
scipy = ">= 1.3.0"
numpy = ">= 1.17.0"
flask = ">= 1.1.0"
pycrypto = ">= 2.6.1"
ipython = ">= 7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
